--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,6 +9,7 @@ body{
 
 .navbar{
 	margin-bottom: 20px;
+	margin-top: 30px;
 	background: $primary url(../img/navbar.png) repeat-x;
 	border: 1px solid #ccc;
 }
@@ -18,4 +19,30 @@ body{
 background:none;
 color:$primary;
 font-weight: bold;	
+}
+
+.logo{
+	width:100%;
+	margin: 40px 0 0 0;
+}
+.primary{
+	color:$primary;
+}
+.subtext{
+	color:#666;
+	font-size:16px;
+	font-weight:bold;
+	margin: 10px 0 0  45px;
+}
+
+header form{
+	float:right;
+	margin-top:30px;
+	background:$primary;
+	padding: 15px;
+	border-radius: 5px;
+	color:#fff;
+}
+img{
+	width:100%;
 }
